[tool.poetry]
name = "catleap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"
pandas = "^2.1.4"
graphviz = "^0.20.1"
matplotlib = "^3.8.2"
japanize-matplotlib = "^1.1.3"
networkx = "^3.2.1"
python-louvain = "^0.16"
scikit-learn = "^1.4.0"
statistics = "^1.0.3.5"
seaborn = "^0.13.2"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
